Bug 63786 - PDF: cropped svg image in writer, not cropped when viewed in exported Pdf document.
Summary: PDF: cropped svg image in writer, not cropped when viewed in exported Pdf doc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: regression
: 71475 80334 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-21 20:20 UTC by Maarten
Modified: 2014-06-21 19:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Writer odt file with cropped svg image (70.76 KB, application/vnd.oasis.opendocument.text)
2013-04-21 20:20 UTC, Maarten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maarten 2013-04-21 20:20:13 UTC
Created attachment 78312 [details]
Writer odt file with cropped svg image

Steps to reproduce. 
1. Open niew writer document file
2. Import svg image
3. Crop svg image.
4. Export document as pdf file.
5. File is not cropped in pdf file.
Comment 1 Thomas van der Meulen [retired] 2013-04-22 09:39:48 UTC
thank you for your bug report, I can reproduce this bug running LibreOffice 4.1 master. I can see that it isn't croped like it is sown in the file. but it is croped just a little bit and difrend. 

version: Version: 4.1.0.0.alpha0+
Build ID: fd179c5f308a0a611bc2b5a479e28ff3ced7964 (21 apr)
os: mac osx 10.8.3
Comment 2 ign_christian 2013-09-10 07:21:13 UTC
I can't reproduce with the attachment on LO 3.6.7.2 (Ubuntu 12.04 32bit)
Comment 3 Maxim Monastirsky 2013-09-10 15:40:46 UTC
Reproducible with LO 4.1.1.2 under Ubuntu 13.10 (64-bit). The image isn't cropped at all.
Comment 5 Michael Stahl 2014-04-02 10:39:39 UTC
fixed on master
Comment 6 Commit Notification 2014-04-02 10:40:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8062623355fcf3e65beae7f8f5e4d46384141f2

fdo#63786 rhbz#1081968: fix PDF export of cropped SVG



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2014-04-02 10:52:21 UTC
*** Bug 71475 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2014-04-02 14:24:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7bea9683e14fcba98e2691fe7fb75f6f68ab0b29&h=libreoffice-4-2

fdo#63786 rhbz#1081968: fix PDF export of cropped SVG


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Cor Nouws 2014-06-21 19:57:13 UTC
*** Bug 80334 has been marked as a duplicate of this bug. ***